tests/functionalTests/invalid/code/zeroArgumentsInsteadOfOne.hs
main :: IO ();
main = do {
    putInt fun;
};

fun :: Int -> Int;
fun x = x + 1;
